@@ -9,6 +9,8 @@
 =====================================================================
 
 Version 4.3.0
+ - Fixed: [ 3532300 ] Can't change ID of existing user (canajun2eh)
+ - Fixed: [ 3532299 ] Can't send message to self (canajun2eh)
  - Fixed: Search between PGV sites not working properly (Pasquale Ceres)
  - Fixed: [ 3516462 ] Incorrect call to find_media_record() (canajun2eh)
  - Fixed: [ 3495818 ] Manage Media - repeated Login requests (canajun2eh)
